<?xml version="1.0"?>
<package format="3">
  <name>siyi_zt30_cam</name>
  <version>0.1.0</version>
  <description>ROS 2 package for capturing photos from the SIYI ZT30 camera</description>
  <maintainer email="rtirum@polyu.edu.hk">Raviteja</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
